<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">
        <TextView
            android:id="@+id/login_app_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/baloo_tamma"
            android:text="@string/zar3ty"
            android:textAllCaps="true"
            android:textColor="#03A281"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/login_email_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/login_app_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/login_email_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/login_password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/login_email_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/login_password_edit_text_hint"
            android:textColorHint="#000"/>
        <CheckBox
            android:id="@+id/login_remember_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@id/login_password_edt"
            app:layout_constraintTop_toBottomOf="@id/login_password_edt"
            android:layout_marginTop="12dp"
            android:text="@string/login_remember_me"
            android:textColor="#000"
            app:buttonTint="#000"/>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_forgot_password"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_remember_check"
            app:layout_constraintEnd_toEndOf="@id/login_password_edt"
            app:layout_constraintTop_toTopOf="@id/login_remember_check" />
        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/login_remember_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:text="@string/login_login_btn"
            android:textAllCaps="false"
            android:background="@drawable/signup_sign_btn_back"
            android:textStyle="bold"
            android:fontFamily="monospace"
            />
        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/login_login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/sign_up_btn"
            android:textAllCaps="false"
            android:background="@drawable/login_signup_btn_back"
            android:textStyle="bold"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/login_terms_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_terms_policy"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/login_signup_btn"
            app:layout_constraintStart_toStartOf="@id/login_signup_btn"
            app:layout_constraintTop_toBottomOf="@id/login_signup_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>