<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        tools:context=".SignUp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/signup_profile_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_username_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_profile_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/user_name_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_email_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_username_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_email_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_confirm_password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_password_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/confirm_password_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_phone_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_confirm_password_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/phone_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#000"
            android:id="@+id/signup_national_id_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_phone_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="monospace"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/national_id_edit_text_hint"
            android:textColorHint="#000"/>
        <Spinner
            android:id="@+id/signup_country_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_national_id_edt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            />

        <RadioGroup
            android:id="@+id/signup_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/signup_phone_edt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_country_spinner"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:weightSum="2"
            >
            <RadioButton
                android:id="@+id/signup_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_radio"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_weight="1.8"
                app:buttonTint="#000"
                />

            <RadioButton
                android:id="@+id/signup_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.2"
                android:text="@string/female_radio"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:buttonTint="#000"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/signup_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/signup_phone_edt"
            app:layout_constraintTop_toBottomOf="@id/signup_radio_group"
            android:layout_marginTop="12dp"
            android:text="@string/i_agree_with_terms_and_conditions"
            android:textColor="#000"
            app:buttonTint="#000"/>
        <Button
            android:id="@+id/signup_sign_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/signup_check_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="#F3E9E9"
            android:textSize="18sp"
            android:text="@string/sign_up_btn"
            android:textAllCaps="false"
            android:background="@drawable/signup_sign_btn_back"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/signup_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_sign_btn"
            app:layout_constraintStart_toStartOf="@id/signup_sign_btn"
            app:layout_constraintEnd_toEndOf="@id/signup_sign_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:clickable="true"
            android:text="@string/already_have_an_account_sign_in"
            android:focusable="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>