<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/sales_item_info_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_upload_cloud"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/sales_item_info_title_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_img"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/SalesItemInfoTitleTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_title_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_description_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_title_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/SalesItemInfoDescriptionTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_description_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/sales_item_info_quantity_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_description_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/SalesItemInfoQuantityTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/sales_item_info_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_quantity_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_price_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_quantity_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/SalesItemInfoPriceTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_price_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_category_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_price_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/SalesItemInfoCategoryTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_category_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_category_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_date_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_category_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:text="@string/SalesItemInfoDateTag"
                android:textColor="#6B6B6B"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/sales_item_info_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sales_item_info_date_tag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/sales_item_info_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/sales_item_info_date_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:text="@string/UpdateItemData"
                android:textAllCaps="false"
                android:background="@drawable/signup_sign_btn_back"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>